force-app/main/default/objects/CASS_Billing__c/CASS_Billing__c.object-meta.xml
<CustomObject>
    <label>CASS Billing</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>CASS Billing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CASS Billings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>