force-app/main/default/objects/CASS_Billing__c/fields/Amount_Charged__c.field-meta.xml
<CustomField>
    <fullName>Amount_Charged__c</fullName>
    <formula>Nett__c  +  Fuel_Surcharges__c  +  Insurance__c  +  Other__c  +  Other_Charges_due_Agent__c +  CCA_Fee_If_Applicable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Charged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>