force-app/main/default/objects/CASS_Billing__c/fields/CCA_Fee_If_Applicable__c.field-meta.xml
<CustomField>
    <fullName>CCA_Fee_If_Applicable__c</fullName>
    <label>CCA Fee (If Applicable)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>