force-app/main/default/objects/CASS_Billing__c/fields/Charges__c.field-meta.xml
<CustomField>
    <fullName>Charges__c</fullName>
    <inlineHelpText>Amended - represents reflection of Support findings while Original represents what customer has put forward in the claim.</inlineHelpText>
    <label>Charges</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amended</fullName>
            </value>
            <value>
                <fullName>Original</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>